move zenstack gen folder

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start",
-    "vercel-build": "zenstack generate && tsc && prisma db push"
+    "start": "next start"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
