--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "vercel-build": "zenstack generate && next build && prisma db push",
     "db:push": "prisma db push",
     "dev": "next dev",
     "postinstall": "prisma generate",
